@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.apache.datasketches</groupId>
     <artifactId>datasketches-memory</artifactId>
-    <version>2.2.0</version>
+    <version>2.2.1</version>
   </parent>
 
   <artifactId>datasketches-memory-java11</artifactId>
@@ -40,6 +40,11 @@
   </properties>
 
   <build>
+    <resources>
+      <resource>
+        <directory>${project.basedir}/src/main/javadoc</directory>
+      </resource>
+    </resources>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -55,6 +60,14 @@
             <compilerArgs>
               <arg>--add-exports</arg>
               <arg>java.base/jdk.internal.ref=org.apache.datasketches.memory</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.misc=org.apache.datasketches.memory</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/sun.nio.ch=org.apache.datasketches.memory</arg>
+              <arg>--add-opens</arg>
+              <arg>java.base/sun.nio.ch=org.apache.datasketches.memory</arg>
+              <arg>--add-opens</arg>
+              <arg>java.base/java.nio=org.apache.datasketches.memory</arg>
             </compilerArgs>
           </configuration>
         </plugin>
